[IMP] Exit the build script if a command fails. [FIX] Adding fr_FR.UTF-8 to the list of generated languages.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
 script:
   - for dfile in `find $TRAVIS_BUILD_DIR -name 'Dockerfile' -not -path "./.git/*"`; do echo " ===== [ CHECKING $dfile ] ===== "; dockerlint $dfile; if [ $? -ne 0 ]; then echo " ----- [ FINISHED IN ERROR ] ----- "; fi; echo ""; done
   - git clone https://github.com/vauxoo/docker-odoo-image.git ${TRAVIS_BUILD_DIR}/docker-odoo-image
-  - cd ${TRAVIS_BUILD_DIR} && build --rm -t vauxoo/docker-ubuntu-base:latest .
+  - cd ${TRAVIS_BUILD_DIR} && docker build --rm -t vauxoo/docker-ubuntu-base:latest .
   - cd ${TRAVIS_BUILD_DIR}/docker-odoo-image/odoo80 && docker build --rm -t vauxoo/odoo-80-image:latest .
   - cd ${TRAVIS_BUILD_DIR}/docker-odoo-image/odoo-shippable && docker build --rm -t vauxoo/odoo-80-image-shippable-auto:latest .
 
