[FIX] Fixed travis tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ install:
 script:
   - for dfile in `find $TRAVIS_BUILD_DIR -name 'Dockerfile' -not -path "./.git/*"`; do echo " ===== [ CHECKING $dfile ] ===== "; dockerlint $dfile; if [ $? -ne 0 ]; then echo " ----- [ FINISHED IN ERROR ] ----- "; fi; echo ""; done
   - git clone https://github.com/vauxoo/docker-odoo-image.git ${TRAVIS_BUILD_DIR}/docker-odoo-image
-  - cd ${TRAVIS_BUILD_DIR} && docker build --rm -t vauxoo/docker-ubuntu-base:16.04 .
-  - cd ${TRAVIS_BUILD_DIR}/docker-odoo-image/odoo100 && docker build --rm -t vauxoo/odoo-100-image:latest .
+  - cd ${TRAVIS_BUILD_DIR} && docker build --rm -t vauxoo/docker-ubuntu-base:16.04-p3 .
+  - cd ${TRAVIS_BUILD_DIR}/docker-odoo-image/odoo110 && docker build --rm -t vauxoo/odoo-110-image:latest .
 
 # TODO: Add docker push
 #after_success:
